--- a/histoire.html
+++ b/histoire.html
@@ -131,11 +131,11 @@
             <div class="fonctionnement">
                 <h3 class="anton-regular">Fonctionnement</h3>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="fonctionnement.html">Comment devenir Hunter ?</a>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular">Comment devenir Hunter ?</a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="fonctionnement.html">Le classement des hunters</a>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular">Le classement des hunters</a>
                     <br>
-                    <a class="chau-philomene-one-regular" href="fonctionnement.html">Des collaborations uniques</a>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular">Des collaborations uniques</a>
                     <br>
                 </div>
             </div>           
