--- a/histoire.html
+++ b/histoire.html
@@ -107,47 +107,35 @@
     <footer>
         <div class="liens">
             <div class="histoiore">
-                <h3 class="anton-regular">Histoire</h3>
+                <h1 class="anton-regular">Histoire</h1>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="#"><p>Debut</p></a>
-                    <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Expansion</p></a>
-                    <br>
-                    <a class="chau-philomene-one-regular" href="#"><p>Aujourd'hui et demain</p></a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
-                <h3 class="anton-regular">Economie</h3>
+                <h1 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="economie.html"></a>
-                    <br>
-                    <a class="chau-philomene-one-regular" href="economie.html"></a>
-                    <br>
-                    <a class="chau-philomene-one-regular" href="economie.html"></a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
-                <h3 class="anton-regular">Fonctionnement</h3>
+                <h1 class="anton-regular">Fonctionnement</h1>
                 <div class="sous-liens">
-                    <a href="fonctionnement.html" class="chau-philomene-one-regular">Comment devenir Hunter ?</a>
-                    <br>
-                    <a href="fonctionnement.html" class="chau-philomene-one-regular">Le classement des hunters</a>
-                    <br>
-                    <a href="fonctionnement.html" class="chau-philomene-one-regular">Des collaborations uniques</a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>           
             <div class="ethiques">
-                <h3 class="anton-regular">Ethique</h3>
+                <h1 class="anton-regular">Ethique</h1>
                 <div class="sous-liens">
-                    <a class="chau-philomene-one-regular" href="ethique.html"></a>
-                    <br>
-                    <a class="chau-philomene-one-regular" href="ethique.html"></a>
-                    <br>
-                    <a class="chau-philomene-one-regular" href="ethique.html"></a>
-                    <br>
+                    <a href="#"><p>Début</p></a><br>
+                    <a href="#"><p>Expansion</p></a><br>
+                    <a href="#"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>             
         </div>
