--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -27,7 +27,7 @@
             <h1 class="titre">Fonctionnement <br> YesWeHack</h1>
         </div>
     </section>
-    <section class="paragraphe1">
+    <section id="section1" class="paragraphe1">
         <div class="chau-philomene-one-regular">
             <h2 class="anton-regular">Comment devenir Hunter ?</h2>
                 <ul>
@@ -38,7 +38,7 @@
         </div>
         <a href="https://dojo-yeswehack.com/" target="_blank"><img class="img_1" src="Assets/images/img_fonctionnement/dojo.jpeg" alt="Logo Dojo_YesWeHack"></a>
     </section>
-    <section class="paragraphe2">
+    <section id="section2" class="paragraphe2">
         <a href="https://yeswehack.com/ranking?period=All" target="_blank"><img class="img_2" src="Assets/images/img_fonctionnement/rank.jpeg" alt="Image rang hunter"></a>
         <div class="chau-philomene-one-regular">
             <h2 class="anton-regular">le classement des hunters</h2>
@@ -48,7 +48,7 @@
             </ul>
         </div>
     </section>
-    <section class="paragraphe3">
+    <section id="section3" class="paragraphe3">
         <div class="chau-philomene-one-regular">
             <h2 class="anton-regular">Des collaborations uniques</h2>
                 <h3> Pourquoi ? (entreprises/custumer)</h3>
@@ -66,7 +66,7 @@
     <footer>
         <div class="liens">
             <div class="histoiore">
-                <h2 class="anton-regular">Histoire</h2>
+                <h1 class="anton-regular">Histoire</h1>
                 <div class="sous-liens">
                     <a href="#"><p>Debut</p></a>
                     <br>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="economie">
-                <h2 class="anton-regular">Economie</h2>
+                <h1 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
                     <a href="#"><p>Debut</p></a>
                     <br>
@@ -88,18 +88,18 @@
                 </div>
             </div>
             <div class="fonctionnement">
-                <h2 class="anton-regular">Fonctionnement</h2>
+                <h1 class="anton-regular">Fonctionnement</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
+                    <a href="#section1"><p>Comment devenir Hunter ?</p></a>
                     <br>
-                    <a href="#"><p>Expension</p></a>
+                    <a href="#section2"><p>Le classement des hunters</p></a>
                     <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
+                    <a href="#section3"><p>Des collaborations uniques</p></a>
                     <br>
                 </div>
             </div>           
             <div class="ethiques">
-                <h2 class="anton-regular">Ethique</h2>
+                <h1 class="anton-regular">Ethique</h1>
                 <div class="sous-liens">
                     <a href="#"><p>Debut</p></a>
                     <br>
@@ -110,8 +110,8 @@
                 </div>
             </div>             
         </div>
-        <img src="Assets/images/logo_ywh.png" id="YWH">
-        <img src="Assets/images/favicon.ico" id="Y">
+        <img src="Assets/images/logo_ywh.png" id="YWH" alt="logo YWH">
+        <img src="Assets/images/favicon.ico" id="Y" alt="notre logo">
         <br>
         <br>
         <br>
@@ -122,11 +122,11 @@
         <br>
 
         <div class="reseaux">
-            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
-            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
-            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
-            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="logo YesWeHack"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="logo X"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="logo linkedin"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
         <p id="mentions">@2025 SAES1-05-06 IUT-NFC Baptiste AUBRY, BUT informatique, A1</p>
     </footer>
