--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -12,12 +12,14 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico" alt="logo"></a></div>
+        <div class="logo">
+            <a href="index.html"><img src="Assets/images/favicon.ico" alt="Logo YesWeHack"></a>
+        </div>
         <nav>
-            <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular-nav">HISTOIRE</span></button></a>
-            <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular-nav">ECONOMIE</span></button></a>
-            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT" class="anton-regular-nav">FONCTIONNEMENT</span></button></a>
-            <a href="ethique.html"><button><span id="ETHIQUE" class="anton-regular-nav">ETHIQUE</span></button></a>
+            <a href="histoire.html"><span id="HISTOIRE" class="anton-regular-nav">HISTOIRE</span></a>
+            <a href="economie.html"><span id="ECONOMIE" class="anton-regular-nav">ECONOMIE</span></a>
+            <a href="fonctionnement.html"><span id="FONCTIONNEMENT" class="anton-regular-nav">FONCTIONNEMENT</span></a>
+            <a href="ethique.html"><span id="ETHIQUE" class="anton-regular-nav">ETHIQUE</span></a>
         </nav>
     </header>
     <section class="intro">
