--- a/histoire.html
+++ b/histoire.html
@@ -104,7 +104,7 @@
     </section>
 
     <!-- footer commun -->
-    <footer>
+    <footer class="chau-philomene-one-regular">
         <div class="liens">
             <div class="histoiore">
                 <h3 class="anton-regular">Histoire</h3>
