--- a/histoire.html
+++ b/histoire.html
@@ -104,38 +104,38 @@
     </section>
 
     <!-- footer commun -->
-    <footer class="chau-philomene-one-regular">
+    <footer>
         <div class="liens">
             <div class="histoiore">
                 <h3 class="anton-regular">Histoire</h3>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
                 <h3 class="anton-regular">Fonctionnement</h3>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Comment devenir Hunter ?</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Le classement des hunters</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Des collaborations uniques</p></a><br>
                 </div>
             </div>           
-            <div class="ethiques">
+            <div class="ethique">
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>             
         </div>
