--- a/ethique.html
+++ b/ethique.html
@@ -1,4 +1,5 @@
-<!doctype html>
+
+  <!doctype html>
 <html lang="fr">
 <head>
   <meta charset="utf-8">
@@ -107,22 +108,60 @@
     <br><br>
   </main>
 
-<footer>
-   
-   
+    <footer>
+        <div class="liens">
+            <div class="histoiore">
+                <h3 class="anton-regular">Histoire</h3>
+                <div class="sous-liens">
+                    <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                </div>
+            </div>
+            <div class="economie">
+                <h3 class="anton-regular">Economie</h3>
+                <div class="sous-liens">
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                </div>
+            </div>
+            <div class="fonctionnement">
+                <h3 class="anton-regular">Fonctionnement</h3>
+                <div class="sous-liens">
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Comment devenir Hunter ?</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Le classement des hunters</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Des collaborations uniques</p></a><br>
+                </div>
+            </div>           
+            <div class="ethique">
+                <h3 class="anton-regular">Ethique</h3>
+                <div class="sous-liens">
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                </div>
+            </div>             
+        </div>
+        <img src="Assets/images/logo_ywh.png" id="YWH" alt="logo yeswehack">
+        <img src="Assets/images/favicon.ico" id="Y" alt="logo du site">
+        <br>
+        <br>
+        <br>
+        <div class="suivre">
+            <p id="Suivez-les">Suivez-les</p>
+            <p id="Suivez-nous">Suivez-nous</p>
+        </div>
+        <div class="reseaux">
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="logo yeswehack"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="logo X (anciennemnt twitter)"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="logo linkedin"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="logo github"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
+        </div>     
+        <p class="chau-philomene-one-regular" id="mentions">@2025 SAES1-05-06 IUT-NFC ALLALI Yanis, BUT informatique, A1</p>
+    </footer>
+
     
-    <div class="reseaux">
-        <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="YES"></a>
-        <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="Twitter"></a>
-        <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="Linkedin"></a>
-        <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png" alt="GitHub"></a>
-        <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="GitHub perso"></a>
-    </div>
-
-   
-    <p id="mentions">@2025 SAES1-05-06 IUT-NFC Yanis ALLALI , BUT informatique, A1</p>
-</footer>
-
-
   </body>
 </html>
