--- a/economie.html
+++ b/economie.html
@@ -64,7 +64,7 @@
           Cette plateforme met en relation des hackers éthiques (appelés "hunters") avec des entreprises clientes
           qui souhaitent identifier et corriger les vulnérabilités de leurs systèmes informatiques et espere obtenir des primes.
 
-          <a href="#">En savoir sur le fonctionnement de YesWeHack..</a>
+          <a href="fonctionnement.html">En savoir sur le fonctionnement de YesWeHack..</a>
         </p>
         </div>
         </div>
@@ -258,5 +258,6 @@
   </body>
 
 </html>
+
 
 
