--- a/economie.html
+++ b/economie.html
@@ -89,10 +89,10 @@
 
         
         <div class="item03">
-          <div class="select" class="item03"></div>
+          <div class="select"></div>
           <div>
           <h2>L'augmentation du chiffre d'affaire</h2>
-          <img src="Assets/images/img_economie/graph01.png">
+          <img src="Assets/images/img_economie/graph01.png" alt="Graphique01">
           </div>
 
           <div class="detail03">
@@ -105,10 +105,10 @@
         </div>
 
         <div class="item03">
-          <div class="select" class="item03"></div>
+          <div class="select"></div>
           <div>
           <h2>L'invesisement d'entreprise dans des prime</h2>
-          <img src="Assets/images/img_economie/graph02.png">
+          <img src="Assets/images/img_economie/graph02.png" alt="Graphique02">
           </div>
 
           <div class="detail03">
@@ -258,6 +258,4 @@
   </body>
 
 </html>
-
-
 
