--- a/economie.html
+++ b/economie.html
@@ -113,9 +113,9 @@
 
           <div class="detail03">
             <h1>L'invesisement d'entreprise dans des prime</h1>
-            <p>Plusieurs grandes entreprises ont investi à plusieurs reprises dans les programmes de YesWeHack et ont également participé aux primes offertes
-               dans le cadre de ces initiatives. Parmi elles, on retrouve des acteurs issus de secteurs variés tels que la finance, l’industrie, la santé,
-                les télécommunications et la technologie. Cela illustre l’influence croissante de YesWeHack dans le secteur économique de la cybersécurité.</p>
+            <p>Plusieurs grandes entreprises ont investi plusieur fois dans des programmes de YesWeHack et ont également contribué au premier des chasseurs.
+               Parmi ses entreprises, on retrouve des acteurs venant de catégorie différente comme la finance, l'industrie, la santé, les télécommunications 
+               et la technologie. Cela montre l’influence grandiose de YesWeHack dans le secteur économique de la cybersécurité.</p>
           </div>
         </div>
 
@@ -166,9 +166,11 @@
 
             <div class="texte">
               <p>
-                Les entreprises profitent d’une expertise mondiale à moindre coût, sans embaucher directement.
-                Les hackers éthiques obtiennent une rémunération transparente et valorisante selon leurs découvertes.
-                YesWeHack, en tant qu’intermédiaire, perçoit une commission sur les primes et gère la sécurité, la vérification et la mise en relation.
+                Les entreprises profitent des compétences des chasseurs à l’échelle mondiale, à moindre coût, sans avoir besoin 
+                d’embaucher directement, ce qui optimise leurs investissements en cybersécurité.
+                Les hackers éthiques reçoivent une prime motivante, proportionnelle à la valeur de leurs découvertes.
+                YesWeHack, qui gère tout cela en tant qu’intermédiaire, prélève une commission sur les primes et assure la sécurité, 
+                la vérification et la mise en relation, renforçant ainsi son influence sur le marché de la cybersécurité.
               </p>
             </div>
 
@@ -183,9 +185,9 @@
 
             <div class="texte">
               <p>
-                En favorisant la coopération entre experts indépendants et entreprises, YesWeHack contribue à un internet plus sûr.
-                Le modèle économique encourage la divulgation responsable des failles et la transparence dans le traitement des vulnérabilités.
-                Plus de 60 000 hackers éthiques issus de 170 pays participent aujourd’hui à ces programmes de bug bounty.
+                En mettant en avant la coopération entre experts indépendants et entreprises, YesWeHack aide à rendre Internet plus sûr. Son modèle économique valorise 
+                la divulgation responsable des failles et la transparence dans la manière dont les vulnérabilités sont traitées. Aujourd’hui, plus de 60 000 hackers 
+                éthiques venant de 170 pays participent à ces programmes de bug bounty.
               </p>
             </div>
 
