--- a/histoire.html
+++ b/histoire.html
@@ -55,11 +55,11 @@
             <h3 class="anton-regular">Débuts de l'entreprise</h3>
             <p class="chau-philomene-one-regular"> 
                 Fondée en 2015 par Guillaume Vassault-Houlière et Manuel Dorne, YesWeHack est une plateforme née du milieu
-                <br> des hackeurs éthiques, c'est-à-dire des pirates informatiques bienveillants qui utilisent leurs compétences pour 
-                <br> renforcer la sécurité des systèmes informatiques plutôt que de les compromettre. L'entreprise met en relation
-                <br> des organisations avec des dizaines de milliers de chercheurs en cybersécurité afin d'identifier et de corriger les
-                <br> bugs avant que les failles ne puissent être exploitées: c'est le bug bounty. Les hackeurs, aussi appelés "white hat"
-                <br> (au contraire des hackeurs malveillants, les "black hat") sont récompensés pour leurs découvertes.
+                des hackeurs éthiques, c'est-à-dire des pirates informatiques bienveillants qui utilisent leurs compétences pour 
+                renforcer la sécurité des systèmes informatiques plutôt que de les compromettre. L'entreprise met en relation
+                des organisations avec des dizaines de milliers de chercheurs en cybersécurité afin d'identifier et de corriger les
+                bugs avant que les failles ne puissent être exploitées: c'est le bug bounty. Les hackeurs, aussi appelés "white hat"
+                (au contraire des hackeurs malveillants, les "black hat") sont récompensés pour leurs découvertes.
             </p>
         </div>
         <div class="img-gauche">
@@ -73,11 +73,11 @@
             <h3 class="anton-regular">Expansion de la start-up</h3>
                 <p class="chau-philomene-one-regular">
                     Depuis sa création, YesWeHack a connu une croissance rapide, rassemblant aujourd'hui plus de 40 000 white hats
-                    <br> inscrits sur leur plateforme. L'influence de l'entreprise s'est étendue, notamment avec plusieurs levées de fonds
-                    <br> menées en 2019, 2021 et 2024. De grandes organisations leur font maintenant confiance, comme par exemple
-                    <br> DoctoLib, Orange, Décathlon ou encore Tencent à l'international. En 2020, elle a été sollicitée par le gouvernement
-                    <br> français pour tester la sécurité de l'application TousAntiCovid. Elle possède plusieurs certifications de sécurité, telles
-                    <br> que SecNumCloud, ISO 27001, CSA STAR ou encore PCI DSS
+                    inscrits sur leur plateforme. L'influence de l'entreprise s'est étendue, notamment avec plusieurs levées de fonds
+                    menées en 2019, 2021 et 2024. De grandes organisations leur font maintenant confiance, comme par exemple
+                    DoctoLib, Orange, Décathlon ou encore Tencent à l'international. En 2020, elle a été sollicitée par le gouvernement
+                    français pour tester la sécurité de l'application TousAntiCovid. Elle possède plusieurs certifications de sécurité, telles
+                    que SecNumCloud, ISO 27001, CSA STAR ou encore PCI DSS
 
                 </p>
         </div>
@@ -92,10 +92,10 @@
             <h3 class="anton-regular">YesWeHack aujourd'hui et demain</h3>
             <p class="chau-philomene-one-regular">
                 Aujourd'hui, YesWeHack s'impose comme le leader européen du bug bounty. L'entreprise poursuit un développement
-                <br> constant à l'international de sa communauté, qui ne cesse de croître. En 2024, elle fait l'acquisition de Sekost, une
-                <br> entreprise française spécialisée dans les audits de cybersécurité à distance. En 2025, elle devient la huitième organisation
-                <br> française à obtenir le statut d'autorité de numérotation CVE (Common Vulnerabilities and Exposures), un registre mondial
-                <br> des informations publiques relatives aux vulnérabilités de sécurité informatique. 
+                constant à l'international de sa communauté, qui ne cesse de croître. En 2024, elle fait l'acquisition de Sekost, une
+                entreprise française spécialisée dans les audits de cybersécurité à distance. En 2025, elle devient la huitième organisation
+                française à obtenir le statut d'autorité de numérotation CVE (Common Vulnerabilities and Exposures), un registre mondial
+                des informations publiques relatives aux vulnérabilités de sécurité informatique. 
             </p>
         </div>
         <div class="img-gauche">
@@ -111,15 +111,15 @@
                 <div class="sous-liens">
                     <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
                     <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="#" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>YesWeHack Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Une plateforme</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Chiffre d'affaire</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Modèle économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
@@ -133,9 +133,9 @@
             <div class="ethique">
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>White hats</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Missions</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Ethique</p></a><br>
                 </div>
             </div>             
         </div>
