--- a/economie.html
+++ b/economie.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="fr">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Économie</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="Assets/css/styleEco.css">
@@ -74,7 +72,7 @@
       <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
       <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
 
-      <section class="bar01"></section>
+      <div class="bar01"></div>
 
       <!--■■■■■■■■■■■■■■ - SECTION N*3 - ■■■■■■■■■■■■■■-->
 
@@ -128,7 +126,7 @@
 
       <!--■■■■■■■■■■■■■■ - Bar transition - ■■■■■■■■■■■■■■-->
 
-      <section class="bar01"></section>
+      <div class="bar01"></div>
 
       <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
       <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
@@ -201,7 +199,7 @@
       <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
       <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
 
-      <section class="bar01"></section>
+      <div class="bar01"></div>
 
       <footer>
         <div class="liens">
