--- a/ethique.html
+++ b/ethique.html
@@ -138,8 +138,8 @@
                 <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
                     <a href="ethique.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>hackeur ethique</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>collaboration</p></a><br>
                 </div>
             </div>             
         </div>
