--- a/ethique.html
+++ b/ethique.html
@@ -113,9 +113,9 @@
             <div class="histoiore">
                 <h3 class="anton-regular">Histoire</h3>
                 <div class="sous-liens">
-                    <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="#" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="histoire.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
