--- a/economie.html
+++ b/economie.html
@@ -52,7 +52,7 @@
 
       <!--■■■■■■■■■■■■■■ - SECTION N*2 - ■■■■■■■■■■■■■■-->
 
-      <section class="Section02">
+      <section id="Section02_eco" class="Section02">
         <div class="premiere">
         <br>
         <div>
@@ -76,7 +76,7 @@
 
       <!--■■■■■■■■■■■■■■ - SECTION N*3 - ■■■■■■■■■■■■■■-->
 
-      <section class="seconde" >
+      <section id="Section03_eco" class="seconde" >
         
         
 
@@ -134,7 +134,7 @@
 
        <!--■■■■■■■■■■■■■■ - SECTION N*4 - ■■■■■■■■■■■■■■-->
 
-      <section class="section04">
+      <section id="Section04_eco" class="section04">
 
         <div class="MAIN04">
 
@@ -214,9 +214,9 @@
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="#Section02_eco" class="chau-philomene-one-regular"><p>plateforme</p></a><br>
+                    <a href="#Section03_eco" class="chau-philomene-one-regular"><p>Graphique</p></a><br>
+                    <a href="#Section04_eco" class="chau-philomene-one-regular"><p>Avantage économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
