--- a/index.html
+++ b/index.html
@@ -140,33 +140,33 @@
             <div class="histoiore">
                 <h1 class="anton-regular">Histoire</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="histoire.html"><p>Début</p></a><br>
+                    <a href="histoire.html"><p>Expansion</p></a><br>
+                    <a href="histoire.html"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
                 <h1 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="economie.html"><p>Début</p></a><br>
+                    <a href="economie.html"><p>Expansion</p></a><br>
+                    <a href="economie.html"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
                 <h1 class="anton-regular">Fonctionnement</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="fonctionnement.html"><p>Début</p></a><br>
+                    <a href="fonctionnement.html"><p>Expansion</p></a><br>
+                    <a href="fonctionnement.html"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>           
             <div class="ethiques">
                 <h1 class="anton-regular">Ethique</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Début</p></a><br>
-                    <a href="#"><p>Expansion</p></a><br>
-                    <a href="#"><p>Aujourd'hui</p></a><br>
+                    <a href="ethique.html"><p>Début</p></a><br>
+                    <a href="ethique.html"><p>Expansion</p></a><br>
+                    <a href="ethique.html"><p>Aujourd'hui</p></a><br>
                 </div>
             </div>             
         </div>
