--- a/ethique.html
+++ b/ethique.html
@@ -121,9 +121,9 @@
             <div class="economie">
                 <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Début</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
-                    <a href="economie.html" class="chau-philomene-one-regular"><p>Aujourd'hui</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>plateforme</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Graphique</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Avantage économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
