--- a/index.html
+++ b/index.html
@@ -148,25 +148,25 @@
             <div class="economie">
                 <h1 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
-                    <a href="economie.html"><p>Début</p></a><br>
-                    <a href="economie.html"><p>Expansion</p></a><br>
-                    <a href="economie.html"><p>Aujourd'hui</p></a><br>
+                    <a href="economie.html"><p>plateforme</p></a><br>
+                    <a href="economie.html"><p>Graphique</p></a><br>
+                    <a href="economie.html"><p>Avantage économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
                 <h1 class="anton-regular">Fonctionnement</h1>
                 <div class="sous-liens">
-                    <a href="fonctionnement.html"><p>Début</p></a><br>
-                    <a href="fonctionnement.html"><p>Expansion</p></a><br>
-                    <a href="fonctionnement.html"><p>Aujourd'hui</p></a><br>
+                    <a href="fonctionnement.html"><p>Comment devenir hunter ?</p></a><br>
+                    <a href="fonctionnement.html"><p>Le classement des hunter</p></a><br>
+                    <a href="fonctionnement.html"><p>Des collaborations uniques</p></a><br>
                 </div>
             </div>           
             <div class="ethiques">
                 <h1 class="anton-regular">Ethique</h1>
                 <div class="sous-liens">
                     <a href="ethique.html"><p>Début</p></a><br>
-                    <a href="ethique.html"><p>Expansion</p></a><br>
-                    <a href="ethique.html"><p>Aujourd'hui</p></a><br>
+                    <a href="ethique.html"><p>hackeur éthique</p></a><br>
+                    <a href="ethique.html"><p>Collaboration</p></a><br>
                 </div>
             </div>             
         </div>
