--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -81,11 +81,11 @@
             <div class="economie">
                 <h1 class="anton-regular">Economie</h1>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
+                    <a href="#"><p>plateforme</p></a>
                     <br>
-                    <a href="#"><p>Expension</p></a>
+                    <a href="#"><p>Graphique</p></a>
                     <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
+                    <a href="#"><p>Avantage économique</p></a>
                     <br>
                 </div>
             </div>
