--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -68,47 +68,35 @@
     <footer>
         <div class="liens">
             <div class="histoiore">
-                <h1 class="anton-regular">Histoire</h1>
+                <h3 class="anton-regular">Histoire</h3>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Début</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>Expansion</p></a><br>
+                    <a href="#" class="chau-philomene-one-regular"><p>YesWeHack Aujourd'hui</p></a><br>
                 </div>
             </div>
             <div class="economie">
-                <h1 class="anton-regular">Economie</h1>
+                <h3 class="anton-regular">Economie</h3>
                 <div class="sous-liens">
-                    <a href="#"><p>plateforme</p></a>
-                    <br>
-                    <a href="#"><p>Graphique</p></a>
-                    <br>
-                    <a href="#"><p>Avantage économique</p></a>
-                    <br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Une plateforme</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Chiffre d'affaire</p></a><br>
+                    <a href="economie.html" class="chau-philomene-one-regular"><p>Modèle économique</p></a><br>
                 </div>
             </div>
             <div class="fonctionnement">
-                <h1 class="anton-regular">Fonctionnement</h1>
+                <h3 class="anton-regular">Fonctionnement</h3>
                 <div class="sous-liens">
-                    <a href="#section1"><p>Comment devenir Hunter ?</p></a>
-                    <br>
-                    <a href="#section2"><p>Le classement des hunters</p></a>
-                    <br>
-                    <a href="#section3"><p>Des collaborations uniques</p></a>
-                    <br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Comment devenir Hunter ?</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Le classement des hunters</p></a><br>
+                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Des collaborations uniques</p></a><br>
                 </div>
             </div>           
-            <div class="ethiques">
-                <h1 class="anton-regular">Ethique</h1>
+            <div class="ethique">
+                <h3 class="anton-regular">Ethique</h3>
                 <div class="sous-liens">
-                    <a href="#"><p>Debut</p></a>
-                    <br>
-                    <a href="#"><p>Expension</p></a>
-                    <br>
-                    <a href="#"><p>Aujourd'hui</p></a>
-                    <br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>White hats</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Missions</p></a><br>
+                    <a href="ethique.html" class="chau-philomene-one-regular"><p>Ethique</p></a><br>
                 </div>
             </div>             
         </div>
