--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -86,9 +86,9 @@
             <div class="fonctionnement">
                 <h3 class="anton-regular">Fonctionnement</h3>
                 <div class="sous-liens">
-                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Comment devenir Hunter ?</p></a><br>
-                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Le classement des hunters</p></a><br>
-                    <a href="fonctionnement.html" class="chau-philomene-one-regular"><p>Des collaborations uniques</p></a><br>
+                    <a href="#section1" class="chau-philomene-one-regular"><p>Comment devenir Hunter ?</p></a><br>
+                    <a href="#section2" class="chau-philomene-one-regular"><p>Le classement des hunters</p></a><br>
+                    <a href="#section3" class="chau-philomene-one-regular"><p>Des collaborations uniques</p></a><br>
                 </div>
             </div>           
             <div class="ethique">
